--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
 <body>
     <H1>Calculadora de rutina</H1>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et sint praesentium numquam nihil at, eum commodi vitae nostrum! Deleniti inventore suscipit eum deserunt earum magni quas ullam debitis eius voluptatum?</p>
- <script src="scripts.js"> </script>   
+    <div>
+        <form id="formulario">
+            <label> Nombre:</label>
+            <input type="text" id="iNombre" value="">
+
+            <label> Edad:</label>
+            <input type="text" value="">
+
+            <label> Nivel (Principiante  | Intermedio | Avanzado):</label>
+            <input type="text" value="">
+
+            <label> Tren ( Inferior | Core | Superior ):</label>
+            <input type="text" value="">
+
+            <div id="botones">
+                <input type="submit" id="btnSubmit" value="Confirmar Ejercicio"></input>
+                <input type="button" id="btnMostrar" value="Ver Rutina"></input>
+            </div>
+
+        </form>
+        <div id="ejercicio">
+
+        </div>
+        <div id="rutina">
+            
+        </div>
+    </div>
+ <script src="./scripts.js"> </script>   
 </body>
 </html>
